# zetta-project

./: Cargo.toml  README.md  index.html  renovate.json
.github/workflows/: deploy.yml  preview.yml  test.yml
locales/: en.json  es.json
public/: site.webmanifest
src/: app.rs  main.rs
src-tauri/: Cargo.toml  Cargo.toml.orig  tauri.conf.json  tauri.conf.json.orig
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
