[package]
name = "zetta-project-ui"
version = "0.0.0-git"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos_i18n = { version = "0.5.5", features = ["csr", "interpolate_display"] }

[workspace]
members = ["src-tauri"]

[profile.release]
incremental = true
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "es"]
